<resources>
    <string name="app_name">JamCast</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="textView1">textView1</string>
    <string name="textView2">textView2</string>
    <string name="textView3">textView3</string>
    <string name="textView4">textView4</string>
    <string name="textView5">textView5</string>
    <string name="employee">Employees Info</string>


</resources>
